Fix z-index menú

--- a/src/assets/css/menu.css
+++ b/src/assets/css/menu.css
@@ -79,7 +79,7 @@
     background-color: #f9f9f9;
     padding-top: 20px;
     padding-bottom: 20px;
-    z-index: 999;
+    z-index: 99999;
 }
 
 .bubble-notificaciones {
